--- a/Sources/Swissance4Output/Swissance4Output.xcodeproj/xcshareddata/xcschemes/Swissance4Output.xcscheme
+++ b/Sources/Swissance4Output/Swissance4Output.xcodeproj/xcshareddata/xcschemes/Swissance4Output.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Puissance4"
-               BuildableName = "Puissance4"
-               BlueprintName = "Puissance4"
-               ReferencedContainer = "container:">
+               BlueprintIdentifier = "EC7B1AF22976871C004177A5"
+               BuildableName = "Swissance4Output"
+               BlueprintName = "Swissance4Output"
+               ReferencedContainer = "container:Swissance4Output.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,16 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Puissance4Tests"
-               BuildableName = "Puissance4Tests"
-               BlueprintName = "Puissance4Tests"
-               ReferencedContainer = "container:">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -50,7 +40,18 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      viewDebuggingEnabled = "No">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "EC7B1AF22976871C004177A5"
+            BuildableName = "Swissance4Output"
+            BlueprintName = "Swissance4Output"
+            ReferencedContainer = "container:Swissance4Output.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -58,15 +59,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Puissance4"
-            BuildableName = "Puissance4"
-            BlueprintName = "Puissance4"
-            ReferencedContainer = "container:">
+            BlueprintIdentifier = "EC7B1AF22976871C004177A5"
+            BuildableName = "Swissance4Output"
+            BlueprintName = "Swissance4Output"
+            ReferencedContainer = "container:Swissance4Output.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
